fix(*): bug with horizontal scroll on mobile fixed

--- a/css/general.css
+++ b/css/general.css
@@ -12,6 +12,10 @@
     padding: 0;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     max-width: 100%;
     overflow-x: hidden;
